--- a/posts/basicandroidapp-execution.mdx
+++ b/posts/basicandroidapp-execution.mdx
@@ -147,7 +147,7 @@ The result of successful authorization is the following message, and note that t
 
 ![authorization response](/images/510/authorization-response.jpg?v=20240912)
 
-Two interstitial web pages are used with our Android sample, hosted at the following URLs:
+Two intermediate web pages are used with our Android sample, hosted at the following URLs:
 
 - [https://www.authsamples.com/apps/finalmobileapp/postlogin.html](https://www.authsamples.com/apps/finalmobileapp/postlogin.html)
 - [https://www.authsamples.com/apps/finalmobileapp/postlogout.html](https://www.authsamples.com/apps/finalmobileapp/postlogout.html)
@@ -175,7 +175,7 @@ The *Deep Linking HTTPS Scheme* for login responses is associated to the app via
 </activity>
 ```
 
-Note that if the interstitial page is left for a couple of minutes before the user clicks *Return to the App*, the authorization code could time out, leading to a user error. The user can always retry and recover though.
+Note that if the intermediate page is left for a couple of minutes before the user clicks *Return to the App*, the authorization code could time out, leading to a user error. The user can always retry and recover though.
 
 ### Step 9: Understand Login Completion
 
