--- a/posts/final-desktop-app-coding-key-points.mdx
+++ b/posts/final-desktop-app-coding-key-points.mdx
@@ -78,9 +78,9 @@ public execute(): void {
 
 ### Sending Private URI Scheme Notifications
 
-As discussed in the previous post, the response to OAuth login and logout operations originates from an *Interstitial Web Page*. The following code then invokes a deep link to return the authorization code to the app:
+As discussed in the previous post, the response to OAuth login and logout operations originates from an *Intermediate Web Page*. The following code then invokes a deep link to return the authorization code to the app:
 
-![interstitial page](/images/450/interstitial-page.jpg)
+![intermediate page](/images/450/intermediate-page.jpg)
 
 ### Receiving Deep Links
 
