--- a/posts/how-to-run-the-ios-code-sample.mdx
+++ b/posts/how-to-run-the-ios-code-sample.mdx
@@ -101,7 +101,7 @@ The result of successful authorization is the following message, and note that t
 
 ![authorization response](/images/550/authorization-response.jpg?v=20240914)
 
-Two interstitial web pages are used with our iOS sample, hosted at the following URLs:
+Two intermediate web pages are used with our iOS sample, hosted at the following URLs:
 
 - [https://www.authsamples.com/apps/finalmobileapp/postlogin.html](https://www.authsamples.com/apps/finalmobileapp/postlogin.html)
 - [https://www.authsamples.com/apps/finalmobileapp/postlogout.html](https://www.authsamples.com/apps/finalmobileapp/postlogout.html)
