--- a/posts/quick-start.mdx
+++ b/posts/quick-start.mdx
@@ -24,7 +24,7 @@ Alternatively, you can follow the <Link href='/posts/how-to-run-the-react-js-spa
 
 The cross platform Electron React app runs on Windows, macOS and Linux. The [AppAuth-JS Library](https://github.com/openid/AppAuth-JS) implements Open ID Connect and logins use the system browser:
 
-![Desktop view](/images/3/desktop-view.jpg)
+![Desktop view](/images/3/desktop-view.jpg?v=20240925)
 
 The app receives login responses on a redirect URI that uses a private-use URI scheme. To run the app on your local computer you can follow the <Link href='/posts/final-desktop-sample-overview'>Final Desktop App Instructions</Link>.
 
