--- a/posts/final-desktop-sample-overview.mdx
+++ b/posts/final-desktop-sample-overview.mdx
@@ -1,69 +1,65 @@
 # Final Desktop App – Overview
 
-Previously we covered <Link href='/posts/desktop-app-coding-key-points'>Code Details</Link> for our initial desktop app. Next we will add some missing features to complete session management, harden security, and improve usability. The desktop app connects to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the desktop app's code to get a fully integrated solution.
+Previously I explained some <Link href='/posts/desktop-app-coding-key-points'>Code Details</Link> for this blog's initial desktop app. Next I add some missing features to complete session management, harden security, and improve usability. The desktop app connects to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the desktop app's code to get a fully integrated solution.
 
 ### New Features
 
-The completed desktop code sample will demonstrate these main features:
+The completed desktop code sample demonstrates these main features:
 
 | Feature | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**React Update**</span> | We will update from plain TypeScript to a more complete frontend technology stack |
-| <span style={{color:'green'}}>**Deep Linking**</span> | Login responses will be returned as deep links, on private URI scheme based redirect URIs |
-| <span style={{color:'green'}}>**Secure Token Storage**</span> | We will persist OAuth tokens using operating system encryption private to the app and user |
+| <span style={{color:'green'}}>**React Update**</span> | I update from plain TypeScript to a more complete frontend technology stack. |
+| <span style={{color:'green'}}>**Deep Linking**</span> | The app receieves login responses using private URI scheme based redirect URIs, to enable desktop deep links. |
+| <span style={{color:'green'}}>**Secure Token Storage**</span> | I save OAuth tokens across app restarts using operating system encryption private to the app and user. |
 
 ### Code Download
 
-The code for our final desktop app can be downloaded from [here](https://github.com/gary-archer/oauth.desktopsample.final):
+Clone the code sample's GitHub repository with the following command:
 
 ```bash
 git clone https://github.com/gary-archer/oauth.desktopsample.final
 ```
 
-![repo](/images/440/repo.jpg)
+![repo](/images/440/repo.jpg?v=20240925)
 
-### How to Run the Sample
+### Run the Code Sample
 
-The instructions are almost identical to those for the <Link href='/posts/desktop-app-how-to-run-the-code-sample'>initial desktop sample</Link>. After cloning the sample code, run the following command from its folder:
+After cloning the sample code, run the following commands to build and run the app:
 
 ```bash
 ./build.sh
-```
-
-The script builds webpack bundles for the main and renderer parts of the desktop app:
-
-![webpack build](/images/440/webpack-build.jpg)
-
-To launch the app execute the following script:
-
-```bash
 ./run.sh
 ```
 
-### Updated Login User Experience
+Alternatively, you can build and run a packaged version of the app:
 
-The app executes logins in the same manner as our initial code sample:
+```bash
+./pack.sh
+```
 
-![desktop login](/images/440/desktop-login.jpg)
+### Updated Login Flow
 
-This blog’s test credential can then be used to sign in:
+Logins continue to use the system browser and the updated desktop app also implements OpenID Connect RP initiated logout.
+
+![desktop login](/images/440/desktop-login.jpg?v=20240925)
+
+You can use this blog’s test credential to sign in:
 
 - User: *guestuser@example.com*
 - Password: *GuestPassword1*
 
-Once login completes, a completion web page is rendered in the browser. A similar page is also shown when receiving the logout response:
+Once a login or logout completes, the browser renders a completion web page:
 
-![login web page](/images/440/login-web-page.jpg)
+![login web page](/images/440/login-web-page.jpg?v=20240925)
 
-When the user continues, a *Private URI Scheme* prompt is presented by the browser, that can deep link back to the desktop app:
+When the user clicks *Return to the App*, the browser prevents a *Private URI Scheme* prompt. To understand its final appearance in the different browsers, run a packaged version of the app:
 
-![login response prompt](/images/440/login-response-prompt.jpg)
 
-The desktop app is then brought to the foreground and can get data from the API using an OAuth access token:
+The desktop app is then brought to the foreground and can get data from the API using its access token:
 
-![logged in](/images/440/logged-in.jpg)
+![logged in](/images/440/logged-in.jpg?v=20240925)
 
-After login our tokens are securely stored for the lifetime of the refresh token. The user can restart the app without requiring a new user login. OpenID Connect logout has also been implemented.
+After login, the app stores tokens in desktop secure storage. The user can restart the app without requiring a new user login, as long as its refresh token remains valid.
 
 ### OAuth Configuration Changes
 
@@ -88,31 +84,24 @@ The final desktop app’s configuration no longer uses HTTP ports, and now uses 
 }
 ```
 
-### Deep Links and Login Reliability
+When a deep link runs after a redirect, the browser may refuse to invoke it for security reasons, unless there is a user gesture. This is especially true if a redirect is entirely automatic, as for a single-sign-on or a logout. To prevent such issues you can use the OpenID Connect *prompt=none* parameter. However, this blog's default authorization server does not support that parameter so I instead set the app's redirect URIs to intermediate web pages.
 
-When a deep link is triggered after a redirect, it is possible that the browser will refuse to invoke it unless there is a user gesture. This is especially true if a redirect is entirely automatic, as for a single-sign-on or a logout.
+### Intermediate Web Pages
 
-Instead there needs to be a screen before invoking the deep link. You may find using the OpenID Connect prompt=login parameter on every login redirect is reliable. In this blog I instead use a custom interstitial page, partly because AWS Cognito does not support the prompt parameter.
-
-### Interstitial Pages
-
-This blog uses interstitial pages that ensure a user gesture. This also improves a little on the default blank browser page that is otherwise displayed to the user after login. The configured redirect URIs point to AWS hosted web pages:
-
+The intermediate web pages run at the following internet URLs. They also improves a little on the default blank browser page that is otherwise displayed to the user after login.
 
 - [https://www.authsamples.com/apps/finaldesktopapp/postlogin.html](https://www.authsamples.com/apps/finaldesktopapp/postlogin.html)
 - [https://www.authsamples.com/apps/finaldesktopapp/postlogout.html](https://www.authsamples.com/apps/finaldesktopapp/postlogout.html)
 
-I deployed the HTML pages to an AWS S3 Bucket and then made them available over SSL via an AWS CloudFront distribution:
+I deployed the HTML pages to an AWS S3 Bucket and then made them used this blog's final SPA's AWS CloudFront distribution to make the web pages available over HTTPS:
 
 ![s3 pages](/images/440/s3-pages.jpg)
 
-### Private URI Scheme Forwarding
-
-If you do a *View Source* for the above interstitial pages you will see that they simply forward the login response to the app via a private URI scheme URL:
+If you use your browser's *View Source* option you can see that the pages simply forward the login response to the app via its private URI scheme URL:
 
 ![response forwarding](/images/440/response-forwarding.jpg)
 
-One downside of this design is that if the user doesn’t click the *Return to the App* button for a couple of minutes, the authorization code could time out, leading to a user error. The user can always retry and recover though.
+One downside of this approach is that, if the user doesn’t click the *Return to the App* button for a couple of minutes, the authorization code could time out, resulting in a user error. The user can always retry and recover though.
 
 ### Private URI Scheme Browser Prompts
 
@@ -126,15 +115,10 @@ This results in a binary built by the [Electron Packager](https://github.com/ele
 
 ![built binary](/images/440/built-binary.jpg)
 
-The prompt messages then look as follows in the main browsers:
 
 **Google Chrome**
 
 ![chrome prompt](/images/440/chrome-prompt.jpg)
-
-**Safari**
-
-![safari prompt](/images/440/safari-prompt.jpg)
 
 **Firefox**
 
@@ -144,9 +128,13 @@ The prompt messages then look as follows in the main browsers:
 
 ![edge prompt](/images/440/edge-prompt.jpg)
 
+**Safari**
+
+![safari prompt](/images/440/safari-prompt.jpg)
+
 ### Final Cognito Desktop OAuth Client
 
-A new OAuth client has been created, which registers the interstitial pages for the redirect URI and the post logout redirect URI:
+A new OAuth client has been created, which registers the intermediate pages for the redirect URI and the post logout redirect URI:
 
 ![oauth client](/images/440/oauth-client.jpg)
 
@@ -220,15 +208,7 @@ This blog’s APIs deny the default test user access to companies other than 2 a
 
 Finally, note that on macOS, startup deep links will only work if we first package the app with *npm run pack*, so that the scheme registration points to the packaged executable:
 
-![macos packaged](/images/440/macos-packaged.jpg)
-
-Desktop deep linking may not be as usable as web and mobile deep linking in practice. Email clients may consider the private URI scheme’s prefix suspect, and block this type of deep link.
-
-### Where Are We?
-
-We have updated our desktop code sample with some essential features. Private URI scheme logins are a more integrated solution, though login usability remains unnatural, due to use of the disconnected browser.
-
-### Next
+![macos packaged](/images/440/macos-packaged.jpg)a
 
 - I provide a <Link href='/posts/final-desktop-app-coding-key-points'>Final Desktop App Code Details</Link>.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
