--- a/posts/ios-code-sample-overview.mdx
+++ b/posts/ios-code-sample-overview.mdx
@@ -185,18 +185,18 @@ There are three scenarios where we will redirect the user on the ASWebAuthentica
 | <span style={{color:'green'}}>**Single Sign On**</span> | The user already has a valid session cookie and signs in automatically without a login screen |
 | <span style={{color:'green'}}>**Logout**</span> | The user’s session cookie is removed, with no prompt |
 
-In each case, there needs to be a screen before invoking the deep link. You may find using the OpenID Connect *prompt=login* parameter on every login redirect is reliable. In this blog I instead use a custom interstitial page, partly because AWS Cognito does not yet support the *prompt* parameter.
+In each case, there needs to be a screen before invoking the deep link. You may find using the OpenID Connect *prompt=login* parameter on every login redirect is reliable. In this blog I instead use a custom intermediate page, partly because AWS Cognito does not yet support the *prompt* parameter.
 
-### This Blog’s Interstitial Web Pages
+### This Blog’s Intermediate Web Pages
 
 This blog uses the following custom *AWS Hosted Web Pages* that are returned to after login / logout redirects. A real company could present its own branded pages instead.
 
 <div className="smallimage">
-![login interstitial page](/images/540/login-interstitial-page.jpg?v=20240914)
+![login intermediate page](/images/540/login-intermediate-page.jpg?v=20240914)
 </div>
 
 <div className="smallimage">
-![logout interstitial page](/images/540/logout-interstitial-page.jpg?v=20240914)
+![logout intermediate page](/images/540/logout-intermediate-page.jpg?v=20240914)
 </div>
 
 ### Test Cases
